--- a/sass/modules/_cloud.scss
+++ b/sass/modules/_cloud.scss
@@ -1,5 +1,14 @@
 // --- CLOUD ------------------------------------------------------------------
 
+.cloud-holder {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
 .cloud {
 	position: absolute;
 
